fix+style: reintroduced a scrollbar to the products slider reel and added styling to it.

--- a/assets/css/media-queries-product.css
+++ b/assets/css/media-queries-product.css
@@ -3,6 +3,7 @@
 
     .product-image{
         object-fit: contain;
+        width: 100%;
     }
 
     .product-wrapper{
