--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -18,7 +18,15 @@
 }
 
 .slider::-webkit-scrollbar{
-    display: none;
+    display: flex;
+}
+
+.slider::-webkit-scrollbar-track{
+    background: transparent;
+}
+
+.slider::-webkit-scrollbar-thumb{
+    background: var(--product-cart-button-text);
 }
 
 .slider{
